--- a/hyprland/keybindings.conf
+++ b/hyprland/keybindings.conf
@@ -1,4 +1,3 @@
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -8,12 +7,11 @@
 # Set programs that you use
 $terminal = foot
 $fileManager = thunar
-$menu = pkill -x wofi || 
 $menu = pkill -x wofi || wofi --show drun
 $browser = google-chrome-stable
 
 ####################
-### KEYBINDINGSS ###
+### KEYBINDINGS ###
 ####################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
@@ -32,21 +30,20 @@ bind = ALT, S, exec, $menu
 bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, M, exit
 bind = $mainMod, S, exec, spotify
-bind = $mainMod, c, exec, code
+bind = $mainMod, C, exec, code
 bind = $mainMod, W, exec, whatsapp-linux-desktop  
 bind = $mainMod, L, exec, systemctl suspend
-bind = $mainMod SHIFT , escape, exec, systemctl poweroff
-bind = $mainMod SHIFT , R , exec, systemctl reboot
+bind = $shiftMod, ESCAPE, exec, systemctl poweroff
+bind = $shiftMod, R, exec, systemctl reboot
 
 # Cycle through workspaces
 bind = ALT, TAB, workspace, e+1
 bind = ALT SHIFT, TAB, workspace, e-1
  
 # Clipboard
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Screenshot
@@ -55,10 +52,10 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, LEFT, movefocus, l
+bind = $mainMod, RIGHT, movefocus, r
+bind = $mainMod, UP, movefocus, u
+bind = $mainMod, DOWN, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -72,18 +69,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move to workspace with focused container with ALT + SHIFT + [0-9]
-bind = ALT SHIFT, 1, movetoworkspace, 1
-bind = ALT SHIFT, 2, movetoworkspace, 2
-bind = ALT SHIFT, 3, movetoworkspace, 3
-bind = ALT SHIFT, 4, movetoworkspace, 4
-bind = ALT SHIFT, 5, movetoworkspace, 5
-bind = ALT SHIFT, 6, movetoworkspace, 6
-bind = ALT SHIFT, 7, movetoworkspace, 7
-bind = ALT SHIFT, 8, movetoworkspace, 8
-bind = ALT SHIFT, 9, movetoworkspace, 9
-bind = ALT SHIFT, 0, movetoworkspace, 10
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $shiftMod, 1, movetoworkspacesilent, 1
 bind = $shiftMod, 2, movetoworkspacesilent, 2
@@ -95,10 +80,6 @@ bind = $shiftMod, 7, movetoworkspacesilent, 7
 bind = $shiftMod, 8, movetoworkspacesilent, 8
 bind = $shiftMod, 9, movetoworkspacesilent, 9
 bind = $shiftMod, 0, movetoworkspacesilent, 10
-
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $shiftMod, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -116,34 +97,9 @@ bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bindel = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
 
-# for resizing window
-# will switch to a submap called resize
-bind=$mainMod,R,submap,resize
-
-# will start a submap called "resize"
-submap=resize
-
-# sets repeatable binds for resizing the active window
-binde=,right,resizeactive,50 0
-binde=,left,resizeactive,-50 0
-binde=,up,resizeactive,0 -50
-binde=,down,resizeactive,0 50
-
-# use reset to go back to the global submap
-bind=,escape,submap,reset
-
-# will reset the submap, meaning end the current one and return to the global one
-submap=reset
-
-# to move window
-bind = $shiftMod,up, movewindow, u
-bind = $shiftMod,K, movewindow, u
-bind = $shiftMod,down, movewindow, d
-bind = $shiftMod,J, movewindow, d
-bind = $shiftMod,left, movewindow, l
-bind = $shiftMod,H, movewindow, l
-bind = $shiftMod,right, movewindow, r
-bind = $shiftMod,L, movewindow, r
-
-
-
+# Screenshot keybindings
+bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now
+bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area
+bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # Screenshot in 5 secs
+bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # Screenshot in 10 secs
+bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # Take screenshot of active window
