--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -14,10 +14,11 @@ general {
 # BACKGROUND SETTINGS
 background {
     monitor = 
-    path = /home/navee/Pictures/img/lockscreen.jpg
-    blur_passes = 0.5
+    path = /home/navee/Pictures/img/gojolock.png
+    blur_passes = 0.3
     color = $base
 }
+
 
 # TIME LABEL
 label {
