--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,4 +1,2 @@
-preload = /home/navee/Pictures/img/home1.jpg
-wallpaper = ,/home/navee/Pictures/img/home1.jpg
-
-
+preload = /home/navee/Pictures/img/luf.jpg
+wallpaper = eDP-1,/home/navee/Pictures/img/luf.jpg
