--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -21,7 +21,7 @@
 
 # windowrulev2 = float, noborder class:^(virt-manager)$,title:(.*QEMU/KVM)$
 # windowrulev2 = opacity 0.80 0.80,class:^(code-oss)$
-# windowrulev2 = opacity 0.80 0.80,class:^(Code)$
+windowrulev2 = opacity 0.92 0.90,class:^(Code)$
 # windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 # windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
 # windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
@@ -38,7 +38,8 @@
 # windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
 # windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
 # windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-# windowrulev2 = opacity 0.70 0.70,class:^(Spotify)$
+ windowrulev2 = opacity 0.80 0.70,class:^(Spotify)$
+ windowrulev2 = opacity 0.80 0.70,class:^(Google-chrome-stable)$
 # windowrulev2 = opacity 0.70 0.70,initialTitle:^(Spotify Free)$
 # windowrulev2 = opacity 0.85 0.85,class:^(thunar)$
 # windowrulev2 = opacity 0.80 0.80,class:^(discord)$
