updated keybinding for the cava

--- a/hyprland/keybindings.conf
+++ b/hyprland/keybindings.conf
@@ -32,6 +32,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, S, exec, spotify
 bind = $mainMod, C, exec, code
+bind = ALT,C,exec,$terminal -e cava
 bind = $mainMod, W, exec, whatsapp-linux-desktop  
 bind = $mainMod, L, exec, systemctl suspend
 bind = $shiftMod, ESCAPE, exec, systemctl poweroff
