--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/navee/Pictures/img/luf.jpg
-wallpaper = eDP-1,/home/navee/Pictures/img/luf.jpg
+preload = /home/navee/Pictures/img/homeluffy.png
+wallpaper = eDP-1,/home/navee/Pictures/img/homeluffy.png
