updated music player and some key bindings

--- a/hyprland/keybindings.conf
+++ b/hyprland/keybindings.conf
@@ -37,6 +37,15 @@ bind = $mainMod, W, exec, whatsapp-linux-desktop
 bind = $mainMod, L, exec, systemctl suspend
 bind = $shiftMod, ESCAPE, exec, systemctl poweroff
 bind = $shiftMod, R, exec, systemctl reboot
+bind = ALT, UP, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = ALT, DOWN, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+
+
+# Music Control
+bind = ALT, LEFT, exec, playerctl previous
+bind = ALT, RIGHT, exec, playerctl next
+bind = ALT, SPACE, exec, playerctl --player=spotify play-pause
+
 
 # Cycle through workspaces
 bind = ALT, TAB, workspace, e+1
